# nextcloud-workspace

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  mkdocs.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_auth_fields.py  003_add_storage.py  004_v2_apps.py  005_builds.py  006_nextcloud.py  007_xpra_apps_seed.py  008_local_app_icons.py  009_kasm_to_stream.py  010_session_limits.py  011_user_preferences.py  012_totp_2fa.py  013_drop_images_table.py  014_token_version.py  015_seed_tools_apps.py  016_seed_new_apps.py  017_terminal_mount_home.py  018_seed_ferdium.py  019_session_last_active.py  020_group_quotas.py  021_seed_web_apps.py  022_seed_jupyter_pgweb.py  023_app_web_native.py  024_swap_apps.py  025_session_shares.py  026_group_policies.py  027_session_vpn_connected.py  028_session_vpn_enabled.py
backend/app/: config.py  database.py  dependencies.py  main.py  metrics.py  rate_limit.py  security.py
backend/app/models/: __init__.py  app_catalog.py  audit.py  build.py  session.py  settings.py  storage.py  user.py
backend/app/routers/: apps.py  auth.py  nc_hub.py  sessions.py  storage.py  system.py
backend/app/routers/admin/: apps.py  audit.py  builds.py  groups.py  nextcloud.py  sessions.py  settings.py  stats.py  users.py
backend/app/services/: audit.py  auth_ldap.py  auth_local.py  container.py  crypto.py  mounts.py  nextcloud.py  policy.py  quota.py  rclone.py  security_gate.py  seed.py  siem.py
backend/app/tasks/: worker.py
backend/tests/: conftest.py  test_health.py  test_sessions.py
compose/: .env.example  docker-compose.yml
containers/: Makefile
docs/: api.md  apps.md  architecture.md  auth-setup.md  index.md  (+6 more)
(+178 files in other folders)
