[tool.poetry]
name = "lwp-backend"
version = "0.1.0"
description = "LWP backend API"
authors = ["LWP"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
python-multipart = "^0.0.20"  # fastapi File/Form (storage upload endpoint)
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
psycopg2-binary = "^2.9"
alembic = "^1.14"
pydantic-settings = "^2.6"
authlib = "^1.3"
httpx = "^0.28"
python-jose = {extras = ["cryptography"], version = "^3.3"}
bcrypt = "^4.0"
cryptography = "^42.0"
redis = {extras = ["asyncio"], version = "^5.2"}
arq = "^0.26"
kubernetes-asyncio = "^31.0"
docker = "^7.0"
ldap3 = "^2.9"
pyotp = "^2.9"
prometheus-fastapi-instrumentator = "^7.0"
prometheus-client = "^0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
aiosqlite = "^0.20"
httpx = "^0.28"
ruff = "^0.8"
mypy = "^1.13"
testcontainers = {extras = ["postgres", "redis"], version = "^4.8"}

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: long lines are accepted repo style; enforced loosely by review instead
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy string forward references in Mapped[] annotations
"app/models/*" = ["F821"]
"**/__init__.py" = ["F401"]
# try-import availability probe imports names it never uses
"app/services/auth_ldap.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
